--- a/ConsoleApps/.project
+++ b/ConsoleApps/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ConsoleApps</name>
+	<name>Standard Edition</name>
 	<comment></comment>
 	<projects>
 	</projects>
