--- a/Servlets/WebContent/WEB-INF/web.xml
+++ b/Servlets/WebContent/WEB-INF/web.xml
@@ -5,13 +5,19 @@
 	version="3.1">
 	<display-name>Servlets</display-name>
 	<welcome-file-list>
-	    <welcome-file>start.html</welcome-file>
+		<welcome-file>start.html</welcome-file>
 		<welcome-file>Servlet1</welcome-file>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	<servlet>
+		<servlet-name>Servlet3</servlet-name>
+		<servlet-class>servlets1.Servlet3</servlet-class>
+		<init-param>
+			<param-name>param</param-name>
+			<param-value>Joske</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+	    <servlet-name>Servlet3</servlet-name>
+	    <url-pattern>/hehe</url-pattern>
+	</servlet-mapping>
 </web-app>
